<resources>
    <string name="app_name">LogIn</string>
    <string name="firstName"></string>
    <string name="lastName"></string>
    <string name="userName"></string>
    <string name="enterUserName">Please enter your username.</string>
    <string name="enterFirstName">Please enter your first name.</string>
    <string name="enterLastName">Please enter your last name.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>